Major cleanup. Thanks, IntelliJ!